fix image styling on smaller screens

--- a/ltm-generator/static/global.css
+++ b/ltm-generator/static/global.css
@@ -95,6 +95,7 @@ figure {
 picture,
 img {
 	max-width: 700px;
+	width: 100%;
 }
 
 figcaption {
